--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 600px;
+    min-height: 650px;
 }
 
 .plans-area {
@@ -357,7 +357,7 @@ p {
 }
 
 .get-started {
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url('../img/section-bg-2.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url('../img/register-crypto-bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -392,10 +392,92 @@ p {
     line-height: 1.5em !important;
 }
 
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 30px;
+    border: none;
+    outline: none;
+    background-color: rgb(223, 162, 9);
+    color: white;
+    cursor: pointer;
+    height: 60px;
+    width: 60px;
+    padding: 15px;
+    border-radius: 50%;
+  }
+
+  #myBtn .fa-rocket {
+    -webkit-transform: rotate(
+-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(
+-45deg);
+  }
+  
+  #myBtn:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+
 .other-banners {
     background-image: url('../img/section-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     min-height: 400px;    
+}
+
+.bread span {
+    color: rgb(223, 162, 9);
+}
+
+.about-crypto {
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url('../img/about-cryptobg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 600px;    
+}  
+
+.text-section-second {
+    color: rgb(223, 162, 9);
+}
+
+.contact-item {
+    height: 100%;
+    padding: 30px;
+    background-color: rgb(223, 162, 9);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    box-shadow: 0 5px 15px rgb(204 163 84 / 50%);
+    position: relative;
+}
+
+.contact-item h5 {
+    color: #0c3c4c;
+}
+
+.contact-item p a {
+   text-decoration: none;
+   color: white;
+}
+
+.panel-area {
+    background-color: white;
+    border-radius: 8px;
+}
+
+.panel-area .panel-welcome {
+    border-bottom: 2px solid rgb(223, 162, 9);
+}
+
+.panel-area .panel-welcome h1 {
+    padding: 30px;
 }
